Correccion de la documentacion del archivo CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*Configuración global de CSS*/
+/*Configuración global de CSS del sitio web*/
 /*Selector Universal*/
 *{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
